[project]
name = "comfyui-flowty-ldsr"
description = "This is a custom node that lets you take advantage of Latent Diffusion Super Resolution (LDSR) models inside ComfyUI."
version = "1.0.0"
license = "LICENSE"
dependencies = ["torchvision", "torch", "einops", "omegaconf", "tqdm", "pytorch-lightning", "torchmetrics==0.11.4"]

[project.urls]
Repository = "https://github.com/flowtyone/ComfyUI-Flowty-LDSR"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Flowty-LDSR"
Icon = ""
